[package]
name = "inherit"
version = "0.0.2"
edition = "2021"
description = "A Rust inherit derive macro"
repository = "https://github.com/hzqd/inherit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = "2.0.47"
